--- a/styles/layout.css
+++ b/styles/layout.css
@@ -50,7 +50,7 @@ header {
 #contents section {
     /* Other styles... */
     scroll-snap-align: start; /* Align the top of the section with the top of the scroll container */
-    height: calc(100vh - var(--header-height));
-    overflow: hidden;
+    min-height: calc(100vh - var(--header-height));
+    overflow: visible;
 }
 
